--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hungry-Monster</title>
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
-    <div id="mealCatagory">
+    <div id="searchContainer">
+        <input class="searchControl" type="text" placeholder="Search for Meal" id="searchInput">
+        <button class="searchControl" id="searchBtn">Search</button>
+    </div>
+    <div id="categories">
 
     </div>
     <script src="app.js"></script>
